--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "model = load_model('IMDB_Simple_RNN.h5',compile=False)\n",
+    "model = load_model('IMDB_Simple_RNN.h5',compile=True)\n",
     "model.summary()"
    ]
   },
